--- a/binary_classification_model/Запуск.md
+++ b/binary_classification_model/Запуск.md
@@ -3,4 +3,4 @@
 * Скачать [модель EfficientNetB7](https://drive.google.com/file/d/1rPa8nbNrb-bJ9r3EKP_ft8bQjESeF2n6/view?usp=sharing)
 * Отредактировать ячейки ноутбука, содержащие пути к файлам в соответствии с вашей архитектурой проекта
 * Всё готово
-* Для Семёна [модель в формате .pkl](https://drive.google.com/file/d/1ZJfF9WSIP8SogkLLUh9DPQ0rPJ0wOa4N/view?usp=sharing)
+* [Модель](https://drive.google.com/file/d/1ZJfF9WSIP8SogkLLUh9DPQ0rPJ0wOa4N/view?usp=sharing)в формате .pkl
